// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders study header in loading stage 1`] = `
<div>
  <div
    class="ui container"
  >
    <div
      class="ui placeholder"
    >
      <div
        class="header"
      >
        <div
          class="line"
        />
        <div
          class="line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders study header with different study creation status -- created 1`] = `
<div>
  <div
    class="ui container"
  >
    <small
      class="text-green cursor-pointer noMargin"
    >
      <i
        aria-hidden="true"
        class="check circle icon"
      />
      <span
        class="text-underline"
      >
        External study resources created! Click for details.
      </span>
    </small>
    <h1
      class="ui header mt-15"
    >
      A study used for testing the header
    </h1>
    <h2
      class="sub header study--header-sub"
    >
      Test Study
    </h2>
    <button
      class="ui tiny basic icon button"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
      SD_00000000
    </button>
  </div>
</div>
`;

exports[`renders study header with different study creation status -- creating 1`] = `
<div>
  <div
    class="ui container"
  >
    <small
      class="text-blue cursor-pointer noMargin"
    >
      <i
        aria-hidden="true"
        class="clock icon"
      />
      <span
        class="text-underline"
      >
        External study resources creation in progress. Click for details.
      </span>
    </small>
    <h1
      class="ui header mt-15"
    >
      A study used for testing the header
    </h1>
    <h2
      class="sub header study--header-sub"
    >
      Test Study
    </h2>
    <button
      class="ui tiny basic icon button"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
      SD_00000000
    </button>
  </div>
</div>
`;

exports[`renders study header with different study creation status -- err 1`] = `
<div>
  <div
    class="ui container"
  >
    <small
      class="text-red cursor-pointer noMargin"
    >
      <i
        aria-hidden="true"
        class="warning sign icon"
      />
      <span
        class="text-underline"
      >
        Error(s) creating external study resources. Click for details.
      </span>
    </small>
    <h1
      class="ui header mt-15"
    >
      A study used for testing the header
    </h1>
    <h2
      class="sub header study--header-sub"
    >
      Test Study
    </h2>
    <button
      class="ui tiny basic icon button"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
      SD_00000000
    </button>
  </div>
</div>
`;

exports[`renders study header with no data 1`] = `
<div>
  <div
    class="ui container"
  >
    <h1
      class="ui header"
    >
      Unknown study name
    </h1>
  </div>
</div>
`;

exports[`renders study header with study name and short name 1`] = `
<div>
  <div
    class="ui container"
  >
    <h1
      class="ui header"
    >
      A study used for testing the header
    </h1>
    <h2
      class="sub header study--header-sub"
    >
      Test Study
    </h2>
    <button
      class="ui tiny basic icon button"
    >
      <i
        aria-hidden="true"
        class="copy icon"
      />
      SD_00000000
    </button>
  </div>
</div>
`;
